--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sail-fmt",
   "displayName": "sail-fmt",
   "description": "Sail Language formatter, based on `sail -fmt` command",
+  "repository": "https://github.com/trdthg/sail-fmt-vscode",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.100.0"
